--- a/templates/project.html
+++ b/templates/project.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
-    <title>Your Website</title>
+    <title>Yuvraj's Project Section</title>
 </head>
 
 <body>
